force-app/main/default/objects/BGR_Price_Assembly__c/BGR_Price_Assembly__c.object-meta.xml
<CustomObject>
    <label>BGR Price Assembly</label>
    <nameField>
        <label>BGR Price Assembly Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Assembly</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>