force-app/main/default/objects/BGR_Price_Assembly__c/fields/BodyMatlCode__c.field-meta.xml
<CustomField>
    <fullName>BodyMatlCode__c</fullName>
    <label>BodyMatlCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>