force-app/main/default/objects/BGR_Price_Assembly__c/fields/Catalog__c.field-meta.xml
<CustomField>
    <fullName>Catalog__c</fullName>
    <label>Catalog</label>
    <length>255</length>
    <type>Text</type>
</CustomField>