force-app/main/default/objects/BGR_Price_Assembly__c/fields/Size_code__c.field-meta.xml
<CustomField>
    <fullName>Size_code__c</fullName>
    <label>Size code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>