force-app/main/default/objects/BGR_Price_Assembly__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Model__c</columns>
    <columns>Price__c</columns>
    <columns>SoftGoodsMatlCode__c</columns>
    <columns>BodyMatlCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>